Updated contact page

--- a/contact.html
+++ b/contact.html
@@ -8,8 +8,8 @@ To contact Michael:
 
 <h2>Business address</h2>
 <address>
-Liquid Bytes Technologies<br />
-c/o Michael Mayer<br />
+Liquid Bytes e.K.<br />
+Michael Mayer<br />
 Geisswiesenstr. 19<br />
 72070 Tübingen<br />
 Germany
@@ -29,6 +29,7 @@ Germany
 </p>
 <p>
 USt.ID DE189758973<br />
+Handelsregister Stuttgart HRA 381344<br />
 &quot;Liquid Bytes&quot; is a registered trademark
 </p>
 
