Updated content and formatting

--- a/vision.html
+++ b/vision.html
@@ -1,24 +1,26 @@
 <?php 
     include 'templates/header.php';
-?>  
+?>
 
-  <h2>Vision</h2>  
-       
-  <p>The past involvement in some of the most exciting software projects enables Michael to do massive code refactorings
-  when needed, to keep deadlines and to show other developers how to work more efficiently. He is also a core team member at 
-  <a href="http://www.javascriptmvc.com/">JavaScriptMVC</a>, an open-source JavaScript framework containing 
-  the best ideas in enterprise JavaScript development.
-  </p>
-  <p>
-  Tools like these, together with agile methodologies, deliver clean code faster while extending the scope 
-  of what web applications can offer in terms of functionality and usability.
-  </p>
-  <blockquote>
-  "Michael Mayer is an extremely talented and professional PHP and JS developer who goes the whole way to project success, 
-  even if it is sometimes long and stony."
-  <em>Gaylord Aulke, Managing Director of Zend Technologies GmbH</em>
-  </blockquote>
-  
+<h2>Vision</h2>
+
+<p>The past involvement in some of the most exciting software projects enables Michael to do massive code refactorings
+    when needed, to keep deadlines and to show other developers how to work more efficiently. He is also a core team
+    member at
+    <a href="http://www.javascriptmvc.com/">JavaScriptMVC</a>, an open-source JavaScript framework containing
+    the best ideas in enterprise JavaScript development.
+</p>
+<p>
+    Tools like these, together with agile methodologies, deliver clean code faster while extending the scope
+    of what web applications can offer in terms of functionality and usability.
+</p>
+<blockquote>
+    "Michael Mayer is an extremely talented and professional PHP and JS developer who goes the whole way to project
+    success,
+    even if it is sometimes long and stony."
+    <em>Gaylord Aulke, Managing Director of Zend Technologies GmbH</em>
+</blockquote>
+
 <?php 
     include 'templates/footer.php';
 ?>		
